# redaction-services

./: README.md  design.md
aks-complete-setup/: Chart.yaml  Dockerfile  Makefile  README.md  aks-setup.sh  app.py  cache.py  ci-cd.yml  conftest.py  demo.py  deployment.yaml  docker-compose.yml  engine.py  ingress.yaml  locustfile.py  logging.py  metrics.py  pipeline.py  pyproject.toml  recognizers.py  redact_cli.py  redaction-dashboard.json  requirements-dev.txt  requirements.txt  service.yaml  settings.py  smoke_test.py  test_accuracy.py  test_api.py  test_cache.py  test_engine.py  test_pipeline.py  values.yaml
aks-complete-setup/mnt/user-data/outputs/pii-redaction/deploy/helm/templates/: deployment.yaml  service.yaml
custom_code/: README.md  engine.py  patterns.py  pipeline.py  redact_cli.py  requirements.txt  server.py  settings.yaml  test_pipeline.py  test_redactor.py
fastapi/: app.md  app.py  google-dlp.py  readme.md
standalone-run/: README.MD  pii_redaction_service.py
