[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pii-redaction-service"
version = "2.0.0"
description = "Production-grade PII/PHI redaction service for LLM traffic"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # ── Detection engines ──────────────────────────────────────────────────
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7,<4.0",                    # NLP backbone for Presidio

    # ── API framework ──────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # ── Async / concurrency ────────────────────────────────────────────────
    "anyio>=4.4",
    "httpx>=0.27",                         # async HTTP client + test client

    # ── Observability ─────────────────────────────────────────────────────
    "prometheus-client>=0.20",
    "structlog>=24.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",

    # ── Resilience ────────────────────────────────────────────────────────
    "tenacity>=8.3",

    # ── Config ────────────────────────────────────────────────────────────
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",          # parallel test execution
    "pytest-timeout>=2.3",
    "faker>=25.0",                 # synthetic PII generation for tests
    "locust>=2.28",                # load testing
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
